feature(index): adjust content 20180313

--- a/about.html
+++ b/about.html
@@ -15,7 +15,6 @@
         <title>NexTrek - About Us</title>
         <meta name="description" content="" />
         <meta name="keywords" content="" />
-        <meta name="author" content="nileforest">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
         <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
 
@@ -40,6 +39,7 @@
 
         <!-- CSS -->
         <link href="css/style.css" rel="stylesheet" type="text/css" />
+        <link href='https://fonts.googleapis.com/css?family=Varela Round' rel='stylesheet'>
         <link href="css/bootstrap.css" rel="stylesheet" type="text/css" />
         <link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
         <link href="css/plugin/sidebar-menu.css" rel="stylesheet" type="text/css" />
@@ -90,23 +90,23 @@
                         <ul class="nav-menu-inner">
 
                             <li>
-                                <a class="" href="index.html">Home</a>
+                                <a class="vr-font" href="index.html">Home</a>
                             </li>
 
                             <li>
-                                <a class="" target="_blank" href="https://nextrek.zendesk.com/hc/zh-tw">Help Center</a>
+                                <a class="vr-font" target="_blank" href="https://nextrek.zendesk.com/hc/zh-tw">Help Center</a>
                             </li>
 
                             <li>
-                                <a class="" href="pricing.html">Pricing</a>
+                                <a class="vr-font" href="pricing.html">Pricing</a>
                             </li>
 
                             <li>
-                            <a class="" href="about.html">About Us</a>
+                            <a class="vr-font" href="about.html">About Us</a>
                             </li>
 
                             <li>
-                                <a class="" href="join.html">Join Us</a>
+                                <a class="vr-font" href="join.html">Join Us</a>
                             </li>
                         </ul>
                     </div>
@@ -119,11 +119,11 @@
             <!-- CONTENT --------------------------------------------------------------------------------->
 
             <!-- Intro Section -->
-            <section class="inner-intro bg-image overlay-light parallax parallax-background1" data-background-img="img/full/about.jpg">
+            <section class="inner-intro dark-bg bg-image overlay-dark parallax parallax-background1" data-background-img="img/full/about.jpg">
                 <div class="container">
                     <div class="row title">
-                        <h2 class="h2">About Us</h2>
-                        <div class="page-breadcrumb">
+                        <h2 class="h2 vr-font">About Us</h2>
+                        <div class="page-breadcrumb vr-font">
                             <a href="index.html">Home</a>/<span>About Us</span>
                         </div>
                     </div>
@@ -138,7 +138,7 @@
                     <div class="row mb-60">
                         <div class="col-md-12">
                             <h3 class="text-center">公司介紹</h3>
-                            <p class="lead pt-15">NexTrek 專注於打造最佳雲端財務管理工具，讓財務資訊成為平易近人的成長夥伴。</p>
+                            <p class="lead pt-15"> <strong class="vr-font">NexTrek </strong>專注於打造最佳雲端財務管理工具，讓財務資訊成為平易近人的成長夥伴。</p>
                         </div>
                     </div>
 
@@ -148,8 +148,22 @@
                         <div class="col-md-12">
                             <h3 class="text-center">我們的使命</h3>
                             <p class="lead pt-15">提供簡單與易用的財務管理工具，成為微型組織及中⼩企業最佳的成⻑夥伴！</p>
+                        </div>
+                    </div>
+
+                    <hr />
+
+                    <div class="row mb-60 mt-60">
+                        <div class="col-md-12">
                             <h3 class="text-center">我們相信</h3>
                             <p class="lead pt-15">財務資訊應該是平易近人的，應該是微型組織及中⼩企業實踐其獨特理想的助力而非阻力。而身為經營者，時間應投入於管理並掌握營運現況，而不是瑣碎的會計帳務細節！</p>
+                        </div>
+                    </div>
+
+                    <hr />
+                    
+                    <div class="row mb-60 mt-60">
+                        <div class="col-md-12">
                             <h3 class="text-center">我們期待</h3>
                             <p class="lead pt-15">透過最直覺的介面輸入與資訊匯入方式，解決冗長且無效率的憑證資料整理蒐集。使用者只需按照Nextrek的清晰指引，產出即時且清晰的資訊，便能夠輕鬆掌握自身的財務狀況與經營績效！</p>
                         </div>
@@ -167,7 +181,7 @@
                     <div class="row mb-60">
                         <!-- Logo -->
                         <div class="col-md-4 col-sm-3 mb-xs-30">
-                            <a class="footer-logo" href="home.html"><img src="img/logo-color.png" alt="" /></a>
+                            <a class="footer-logo" href="index.html"><img src="img/logo-color.png" alt="NexTrek" /></a>
                         </div>
                         <!-- End Logo -->
 
@@ -180,7 +194,7 @@
                         </div>
                         <div class="col-md-6 col-sm-12">
                             <ul class="link-small">
-                                <li><a href="mailto:info@nextrek.co"><i class="fas fa-envelope"></i>info@nextrek.co</a></li>
+                                <li><a class="vr-font" href="mailto:info@nextrek.co"><i class="fas fa-envelope"></i>info@nextrek.co</a></li>
                             </ul>
                         </div>
                     </div>
@@ -190,7 +204,7 @@
                 <!-- Copyright Bar -->
                 <section class="copyright pt-60 pb-15">
                     <div class="container">
-                        <p class="">
+                        <p class="vr-font">
                             © 2016-2018 <a><b>NexTrek Co.</b></a>. All Rights Reserved.
                         </p>
                     </div>
