--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		</script>
 
         <meta charset="utf-8" />
-        <title>NexTrek - Home</title>
+        <title>NexTrek - Your smart financial partner.</title>
         <meta name="description" content="微型企業使用 NexTrek 用最輕鬆的方式管理內帳、瞭解營運狀況，NexTrek 能夠為您的公司呈現最清楚的金流狀況。" />
         <meta name="keywords" content="NexTrek, 匯雲, 中小企業 ,微型企業, 會計軟體, 金流管理" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
@@ -39,6 +39,7 @@
 
         <!-- CSS -->
         <link href="css/style.css" rel="stylesheet" type="text/css" />
+        <link href='https://fonts.googleapis.com/css?family=Varela Round' rel='stylesheet'>
         <link href="css/bootstrap.css" rel="stylesheet" type="text/css" />
         <link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
         <link href="css/plugin/sidebar-menu.css" rel="stylesheet" type="text/css" />
@@ -92,23 +93,23 @@
                         <ul class="nav-menu-inner">
 
                             <li>
-                                <a class="" href="#">Home</a>
+                                <a class="vr-font" href="#">Home</a>
                             </li>
 
                             <li>
-                                <a class="" target="_blank" href="https://nextrek.zendesk.com/hc/zh-tw">Help Center</a>
+                                <a class="vr-font" target="_blank" href="https://nextrek.zendesk.com/hc/zh-tw">Help Center</a>
                             </li>
 
                             <li>
-                                <a class="" href="pricing.html">Pricing</a>
+                                <a class="vr-font" href="pricing.html">Pricing</a>
                             </li>
 
                             <li>
-                                <a class="" href="about.html">About Us</a>
+                                <a class="vr-font" href="about.html">About Us</a>
                             </li>
 
                             <li>
-                                <a class="" href="join.html">Join Us</a>
+                                <a class="vr-font" href="join.html">Join Us</a>
                             </li>
                         </ul>
                     </div>
@@ -128,12 +129,17 @@
 		                <div class="js-fullscreen-height container">
 		                    <div class="intro-content">
 		                        <div class="intro-content-inner">
-		                            <h5>Your Smart Financial Partner.</h5>
+		                            <h5 class="vr-font">Your Smart Financial Partner.</h5>
 		                            <br />
 
 		                            <h1>最佳雲端金流管理工具</h1>
 
-		                            <br>
+		                            <br />
+
+		                            <h4>-讓中小企業與微型組織記帳與資金管理變得輕鬆容易-</h4>
+
+		                            <div class="spacer-60"></div>
+
 		                            <div><a href="https://docs.google.com/forms/d/e/1FAIpQLScTnHV2rpI15HnuRPSqC_ko8zp6j_9yJArcyCRG71aN9OesWA/viewform" target="_blank" class="btn btn-md btn-color-a">搶先登記</a><span class="btn-space-10 xs-hidden"></span><a href="https://nextrek.co/" target="_blank" class="btn btn-md btn-color-a">立即登入</a></div>
 		                        </div>
 		                    </div>
@@ -151,7 +157,7 @@
             <!-- Service Section -->
             <section id="service" class="ptb ptb-sm-80">
                 <div class="wow fadeInLeft container text-center">
-                    <h3>四大特色，讓 NexTrek 成為您聰明的財務管理夥伴</h3>
+                    <h3>四大特色，讓 <span class="vr-font">NexTrek</span> 成為您聰明的財務管理夥伴</h3>
                     <div class="spacer-60"></div>
                     <div class="row">
                         <div class="col-md-6 col-sm-6 mb-45 pt-15">
@@ -167,12 +173,12 @@
                         <div class="col-md-6 col-sm-6 mb-45 pt-15">
                             <div class="page-icon-top"><i class="fas fa-dollar-sign fa-sm"></i></div>
                             <h5>解決報帳麻煩事</h5>
-                            <p class="lead">不需要學習會計借貸知識<br />輕鬆使用不煩惱！</p>
+                            <p class="lead">優化零用金與代墊款記錄方式<br />整理報帳真輕鬆！</p>
                         </div>
                         <div class="col-md-6 col-sm-6 mb-45 pt-15">
                             <div class="page-icon-top"><i class="fas fa-globe fa-sm"></i></i></div>
-                            <h5>不受地點限制</h5>
-                            <p class="lead">雲端操作不受時間環境限制<br />隨時輸入查看真便利！</p>
+                            <h5>隨時隨地使用</h5>
+                            <p class="lead">雲端操作不受時間空間限制<br />隨時輸入查看真便利！</p>
                         </div>
                     </div>
                 </div>
@@ -194,7 +200,7 @@
                                 <div class="container">
                                     <div class="row">
                                         <div class="col-md-6 mb-sm-30">
-                                            <img src="img/moc-2.png" alt="" />
+                                            <img src="img/trans.png" alt="" />
                                         </div>
                                         <div class="col-md-5 offset-md-1">
                                             <h3>簡易智慧的輸入方式</h3>
@@ -203,7 +209,7 @@
                                             <p>不需要學習會計借貸即可輕鬆使用</p>
                                             <p>聰明解決員工代墊、股東墊借等紀錄困擾</p>
                                             <div class="spacer-60"></div>
-                                            <a href="" class="btn btn-lg btn-black">查看更多</a>
+                                            <a href="https://nextrek.zendesk.com/hc/zh-tw" target="_blank" class="btn btn-lg btn-black">查看更多</a>
                                         </div>
                                     </div>
                                 </div>
@@ -213,7 +219,7 @@
                                 <div class="container">
                                     <div class="row">
                                         <div class="col-md-6 mb-sm-30">
-                                            <img src="img/moc-2.png" alt="" />
+                                            <img src="img/dashboard.png" alt="" />
                                         </div>
                                         <div class="col-md-5 offset-md-1">
                                             <h3>即時的管理儀表板</h3>
@@ -222,47 +228,30 @@
                                             <p>透過視覺化報表，隨時掌握企業發展與警訊</p>
                                             <p>健全管理功能，奠基未來發展碁石</p>
                                             <div class="spacer-60"></div>
-                                            <a href="" class="btn btn-lg btn-black">查看更多</a>
+                                            <a href="https://nextrek.zendesk.com/hc/zh-tw" target="_blank" class="btn btn-lg btn-black">查看更多</a>
                                         </div>
                                     </div>
                                 </div>
                             </div>
 
-                            <!-- <div class="item">
+                            <div class="item">
                                 <div class="container">
                                     <div class="row">
                                         <div class="col-md-6 mb-sm-30">
-                                            <img src="img/moc-2.png" alt="" />
+                                            <img src="img/multi.png" alt="" />
                                         </div>
                                         <div class="col-md-5 offset-md-1">
-                                            <h3>多樣的動態圖表</h3>
+                                            <h3>支援多裝置使用</h3>
                                             <div class="spacer-15"></div>
-                                            <p>Cras dapibus Vivamus elementum semper nisi Aenean vulputate eleifend tellus Aenean leo ligula, porttitor eu consequat vitae Phasellus viverra nulla ut metus varius laoreet.</p>
-                                            <p>porttitor eu consequat vitae Phasellus viverra nulla ut metus varius laoreet</p>
-                                            <div class="spacer-15"></div>
-                                            <a href="" class="btn btn-lg btn-black">查看更多</a>
+                                            <p>跨平台支援，不論手機、平板或電腦都能使用</p>
+                                            <p>隨時使用，立即新增交易紀錄</p>
+                                            <div class="spacer-60"></div>
+                                            <a href="https://nextrek.zendesk.com/hc/zh-tw" target="_blank" class="btn btn-lg btn-black">查看更多</a>
                                         </div>
                                     </div>
                                 </div>
-                            </div> -->
-
-                            <!-- <div class="item">
-                                <div class="container">
-                                    <div class="row">
-                                        <div class="col-md-6 mb-sm-30">
-                                            <img src="img/moc-2.png" alt="" />
-                                        </div>
-                                        <div class="col-md-5 offset-md-1">
-                                            <h3>權限分層分工</h3>
-                                            <div class="spacer-15"></div>
-                                            <p>Cras dapibus Vivamus elementum semper nisi Aenean vulputate eleifend tellus Aenean leo ligula, porttitor eu consequat vitae Phasellus viverra nulla ut metus varius laoreet.</p>
-                                            <p>porttitor eu consequat vitae Phasellus viverra nulla ut metus varius laoreet</p>
-                                            <div class="spacer-15"></div>
-                                            <a href="" class="btn btn-lg btn-black">查看更多</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div> -->
+                            </div>
+                            
                         </div>   
                     </div>
                 </div>
@@ -274,7 +263,7 @@
                 <div class="container text-center">
                     <div class="row">
                         <div class="col-md-8 offset-md-2">
-                            <h4 class="mb-15">若您有興趣體驗新一代的資金管理，請按此留下聯絡資訊<br />
+                            <h4 class="mb-15">若您有興趣體驗新一代的資金管理工具，請按此留下聯絡資訊<br />
                             我們將盡快邀請您使用！</h4>
                             <a class="btn btn-md btn-white" href="https://docs.google.com/forms/d/e/1FAIpQLScTnHV2rpI15HnuRPSqC_ko8zp6j_9yJArcyCRG71aN9OesWA/viewform" target="_blank">搶先登記</a>
                         </div>
@@ -291,7 +280,7 @@
                     <div class="row mb-60">
                         <!-- Logo -->
                         <div class="col-md-4 col-sm-3 mb-xs-30">
-                            <a class="footer-logo" href="home.html"><img src="img/logo-color.png" alt="" /></a>
+                            <a class="footer-logo" href="#"><img src="img/logo-color.png" alt="NexTrek" /></a>
                         </div>
                         <!-- End Logo -->
 
@@ -304,7 +293,7 @@
                         </div>
                         <div class="col-md-6 col-sm-12">
                             <ul class="link-small">
-                                <li><a href="mailto:info@nextrek.co"><i class="fas fa-envelope"></i>info@nextrek.co</a></li>
+                                <li><a class="vr-font" href="mailto:info@nextrek.co"><i class="fas fa-envelope"></i>info@nextrek.co</a></li>
                             </ul>
                         </div>
                     </div>
@@ -314,7 +303,7 @@
                 <!-- Copyright Bar -->
                 <section class="copyright pt-60 pb-15">
                     <div class="container">
-                        <p class="">
+                        <p class="vr-font">
                             © 2016-2018 <a><b>NexTrek Co.</b></a>. All Rights Reserved.
                         </p>
                     </div>
