--- a/join.html
+++ b/join.html
@@ -15,7 +15,6 @@
         <title>NexTrek - Join Us</title>
         <meta name="description" content="" />
         <meta name="keywords" content="" />
-        <meta name="author" content="nileforest">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
         <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
 
@@ -40,6 +39,7 @@
 
         <!-- CSS -->
         <link href="css/style.css" rel="stylesheet" type="text/css" />
+        <link href='https://fonts.googleapis.com/css?family=Varela Round' rel='stylesheet'>
         <link href="css/bootstrap.css" rel="stylesheet" type="text/css" />
         <link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
         <link href="css/plugin/sidebar-menu.css" rel="stylesheet" type="text/css" />
@@ -90,23 +90,23 @@
                         <ul class="nav-menu-inner">
 
                             <li>
-                                <a class="" href="index.html">Home</a>
+                                <a class="vr-font" href="index.html">Home</a>
                             </li>
 
                             <li>
-                                <a class="" target="_blank" href="https://nextrek.zendesk.com/hc/zh-tw">Help Center</a>
+                                <a class="vr-font" target="_blank" href="https://nextrek.zendesk.com/hc/zh-tw">Help Center</a>
                             </li>
 
                             <li>
-                                <a class="" href="pricing.html">Pricing</a>
+                                <a class="vr-font" href="pricing.html">Pricing</a>
                             </li>
 
                             <li>
-                                <a class="" href="about.html">About Us</a>
+                                <a class="vr-font" href="about.html">About Us</a>
                             </li>
 
                             <li>
-                                <a class="" href="#">Join Us</a>
+                                <a class="vr-font" href="#">Join Us</a>
                             </li>
 
                         </ul>
@@ -122,8 +122,8 @@
             <section class="inner-intro dark-bg bg-image overlay-dark parallax parallax-background1" data-background-img="img/full/join.jpg">
                 <div class="container">
                     <div class="row title">
-                        <h2 class="h2">Join Us</h2>
-                        <div class="page-breadcrumb">
+                        <h2 class="h2 vr-font">Join Us</h2>
+                        <div class="page-breadcrumb vr-font">
                             <a href="index.html">Home</a>/<span>Join Us</span>
                         </div>
                     </div>
@@ -133,7 +133,7 @@
 
 
             <!-- Statement Section -->
-            <section class="ptb-60" id="statement">
+            <section class="pt ptb-sm-80" id="statement">
                 <div class="container text-center">
                     <div class="row">
                         <div class="col-md-8 offset-md-2">
@@ -143,15 +143,15 @@
                             <p class="lead pt-15"><b>【目前職缺】</b></p>
                             <p>Rails 工程師（全端/後端）</p>
                             <p class="lead pt-15"><b>【條件要求】</b></p>
-                            <ol>
-                                <li>熟悉以 Ruby on rails 開發網頁</li>
-                                <li>熟悉 Git，使用過 Git flow/Github flow 進行多人協作</li>
-                                <li>熟悉資料庫設計與 RSpec 測試</li>
-                                <li>JavaScript 與 HTML Form 表單處理，基本 CSS/Bootstrap 用法</li>
-                                <li>1 年以上 Rails 開發經驗</li>
-                                <li>喜愛團隊合作與重視使用者體驗</li>
-                            </ol>
-                            <p>不限年資、年紀、性別，只要您覺得符合條件，歡迎您將個人履歷及加分作品寄至 <a href="mailto:info@nextrek.co">info@nextrek.co</a></p>
+                            <p>熟悉以 Ruby on Rails 開發網頁</p>
+                            <p>熟悉 Git，使用過 Git flow/Github flow 進行多人協作</p>
+                            <p>熟悉資料庫設計與 RSpec 測試</p>
+                            <p>JavaScript 與 HTML Form 表單處理，基本 CSS/Bootstrap 用法</p>
+                            <p>1 年以上 Rails 開發經驗</p>
+                            <p>喜愛團隊合作與重視使用者體驗</p>
+
+                            <div class="spacer-30"></div>
+                            <p class="lead vr-font">不限年資、年紀、性別，只要您覺得符合條件，歡迎您將個人履歷及加分作品寄至 <a href="mailto:info@nextrek.co">info@nextrek.co</a></p>
                         </div>
                     </div>
                 </div>
@@ -172,7 +172,7 @@
                     <div class="row mb-60">
                         <!-- Logo -->
                         <div class="col-md-4 col-sm-3 mb-xs-30">
-                            <a class="footer-logo" href="home.html"><img src="img/logo-color.png" alt="" /></a>
+                            <a class="footer-logo" href="index.html"><img src="img/logo-color.png" alt="NexTrek" /></a>
                         </div>
                         <!-- End Logo -->
 
@@ -185,7 +185,7 @@
                         </div>
                         <div class="col-md-6 col-sm-12">
                             <ul class="link-small">
-                                <li><a href="mailto:info@nextrek.co"><i class="fas fa-envelope"></i>info@nextrek.co</a></li>
+                                <li><a class="vr-font" href="mailto:info@nextrek.co"><i class="fas fa-envelope"></i>info@nextrek.co</a></li>
                             </ul>
                         </div>
                     </div>
@@ -195,7 +195,7 @@
                 <!-- Copyright Bar -->
                 <section class="copyright pt-60 pb-15">
                     <div class="container">
-                        <p class="">
+                        <p class="vr-font">
                             © 2016-2018 <a><b>NexTrek Co.</b></a>. All Rights Reserved.
                         </p>
                     </div>
