--- a/pricing.html
+++ b/pricing.html
@@ -39,6 +39,7 @@
 
         <!-- CSS -->
         <link href="css/style.css" rel="stylesheet" type="text/css" />
+        <link href='https://fonts.googleapis.com/css?family=Varela Round' rel='stylesheet'>
         <link href="css/bootstrap.css" rel="stylesheet" type="text/css" />
         <link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
         <link href="css/plugin/sidebar-menu.css" rel="stylesheet" type="text/css" />
@@ -92,23 +93,23 @@
                         <ul class="nav-menu-inner">
 
                             <li>
-                                <a class="" href="index.html">Home</a>
+                                <a class="vr-font" href="index.html">Home</a>
                             </li>
 
                             <li>
-                                <a class="" target="_blank" href="https://nextrek.zendesk.com/hc/zh-tw">Help Center</a>
+                                <a class="vr-font" target="_blank" href="https://nextrek.zendesk.com/hc/zh-tw">Help Center</a>
                             </li>
 
                             <li>
-                                <a class="" href="#.html">Pricing</a>
+                                <a class="vr-font" href="#.html">Pricing</a>
                             </li>
 
                             <li>
-                                <a class="" href="about.html">About Us</a>
+                                <a class="vr-font" href="about.html">About Us</a>
                             </li>
 
                             <li>
-                                <a class="" href="join.html">Join Us</a>
+                                <a class="vr-font" href="join.html">Join Us</a>
                             </li>
                         </ul>
                     </div>
@@ -123,8 +124,8 @@
             <section class="inner-intro dark-bg bg-image overlay-dark parallax parallax-background1" data-background-img="img/full/pricing.jpg">
                 <div class="container">
                     <div class="row title">
-                        <h2 class="h2">Pricing</h2>
-                        <div class="page-breadcrumb">
+                        <h2 class="h2 vr-font">Pricing</h2>
+                        <div class="page-breadcrumb vr-font">
                             <a href="index.html">Home</a>/<span>Pricing</span>
                         </div>
                     </div>
@@ -136,13 +137,13 @@
             <section id="Pricing" class="ptb ptb-sm-80">
                 <div class="container text-center">
                     <h3>價格表</h3>
-                    <p class="lead col-md-8 offset-md-2">目前我們提供 Lite 與 Pro 兩種訂閱方案，您可根據需求選擇適合之類型。</p>
+                    <p class="lead col-md-8 offset-md-2 vr-font">目前我們提供 Lite 與 Pro 兩種訂閱方案，您可根據需求選擇適合之類型。</p>
                     <div class="spacer-60"></div>
                     <div class="row">
                         <div class="col-md-6">
                             <div class="Pricing-box">
                                 <div class="price-title spacing-box">
-                                    <h4>NexTrek Lite</h4>
+                                    <h4 class="vr-font">NexTrek Lite</h4>
                                 </div>
                                 <hr />
                                 <div class="spacing-box">
@@ -169,7 +170,7 @@
                         <div class="col-md-6">
                             <div class="Pricing-box highlight">
                                 <div class="price-title spacing-box">
-                                    <h4>NexTrek Pro</h4>
+                                    <h4 class="vr-font">NexTrek Pro</h4>
                                 </div>
                                 <hr />
                                 <div class="spacing-box">
@@ -179,11 +180,11 @@
                                 <hr />
                                 <div class="pricing-features spacing-grid">
                                     <ul>
-                                        <li><strong>NexTrek Lite </strong>完整功能</li>
+                                        <li><strong class="vr-font">NexTrek Lite </strong>完整功能</li>
                                         <li><strong>4 </strong>個使用者帳號</li>
                                         <li>支援資料匯出</li>
+                                        <li>更多的管理與分析圖表</li>
                                         <li>優先即時通訊支援服務</li>
-                                        <li>啟用兩步驟驗證（2FA）</li>
                                     </ul>
                                 </div>
                                 <hr />
@@ -206,7 +207,7 @@
                     <div class="row mb-60">
                         <!-- Logo -->
                         <div class="col-md-4 col-sm-3 mb-xs-30">
-                            <a class="footer-logo" href="home.html"><img src="img/logo-color.png" alt="" /></a>
+                            <a class="footer-logo" href="index.html"><img src="img/logo-color.png" alt="NexTrek" /></a>
                         </div>
                         <!-- End Logo -->
 
@@ -219,7 +220,7 @@
                         </div>
                         <div class="col-md-6 col-sm-12">
                             <ul class="link-small">
-                                <li><a href="mailto:info@nextrek.co"><i class="fas fa-envelope"></i>info@nextrek.co</a></li>
+                                <li><a class="vr-font" href="mailto:info@nextrek.co"><i class="fas fa-envelope"></i>info@nextrek.co</a></li>
                             </ul>
                         </div>
                     </div>
@@ -229,7 +230,7 @@
                 <!-- Copyright Bar -->
                 <section class="copyright pt-60 pb-15">
                     <div class="container">
-                        <p class="">
+                        <p class="vr-font">
                             © 2016-2018 <a><b>NexTrek Co.</b></a>. All Rights Reserved.
                         </p>
                     </div>
